# compass_pdf_local

./: .gitignore  README.md
graph_analysis/: .env.example  .gitignore  README.md  analyze_multimodal.py  analyze_pdf.py  aws_config.py  document_lookup.py  pyproject.toml  requirements.txt  run_analysis.sh  run_streamlit.sh  run_streamlit_multimodal.sh  setup_check.py  setup_postgres.sh  start_proxy.sh  streamlit_app.py  streamlit_multimodal.py  textract_loader.py
pdf-preprocessing/: README.md  document_processing.md
pdf-preprocessing/pdf_infra/: .gitignore  README.md  app.py  cdk.context.json  cdk.json  requirements.txt
pdf-preprocessing/pdf_infra/pdf_infra/: __init__.py  pdf_preprocess_stack.py
pdf-preprocessing/pdf_infra/pdf_infra/docker_files/compress_pdf/: Dockerfile
pdf-preprocessing/pdf_infra/pdf_infra/docker_files/selectable_pdf/: Dockerfile
pdf-preprocessing/pdf_infra/pdf_infra/lambda/compress_pdf/: main.py
pdf-preprocessing/pdf_infra/pdf_infra/lambda/process_textract/: main.py
pdf-preprocessing/pdf_infra/pdf_infra/lambda/selectable_pdf/: main.py  requirements.txt
pdf-preprocessing/pdf_infra/pdf_infra/lambda/start_textract/: main.py
pdf-preprocessing/pdf_infra/pdf_infra/lambda_layer/helpertools/: setup.py
pdf-preprocessing/pdf_infra/pdf_infra/lambda_layer/pdfprocessor/: README.md  requirements.txt  setup.py
pdf-preprocessing/pdf_infra/pdf_infra/lambda_layer/textracttools/: setup.py
pdf-preprocessing/pdf_infra/pdf_infra/step_functions/: compress_pdf_workflow.json
prototype/: COMPASS.py  app.py
(+12 files in other folders)
